adding some pluses

--- a/webs.tex
+++ b/webs.tex
@@ -558,15 +558,15 @@ where $ T $ ranges over $ k $ elements subsets of $ S $.
 
 \subsection{Definition of the functor $\Gamma_n: \Sp(\SL_n)^+ \rightarrow \Rep(\SL_n)$} \label{sec:deffunctor}
 
-We now define a functor $ \Gamma_n : \Sp(\SL_n) \rightarrow \Rep(\SL_n) $. At the level of objects we take
-$$(k_1, \dots, k_m) \mapsto \Alt^{k_1}_q \bC_q^n \otimes \dots \otimes \Alt^{k_m}_q \bC_q^n .$$
+We now define a functor $ \Gamma_n : \Sp(\SL_n)^+ \rightarrow \Rep(\SL_n) $. At the level of objects we take
+$$(k_1^+, \dots, k_m^+) \mapsto \Alt^{k_1}_q \bC_q^n \otimes \dots \otimes \Alt^{k_m}_q \bC_q^n .$$
 For morphisms we take
 $$ \fuse{k}{l}{k+l} \mapsto M_{k,l} \ \ \text{ and } \ \ \fork{k}{l}{k+l} \mapsto M'_{k,l}.$$
 
 \todo{Define the map on tags.}
 
 \begin{thm}
-This defines a pivotal functor $\Gamma_n: \Sp(\SL_n) \rightarrow \Rep(\SL_n)$.
+This defines a pivotal functor $\Gamma_n: \Sp(\SL_n)^+ \rightarrow \Rep(\SL_n)$.
 \end{thm}
 \begin{proof}
 One needs to check all the relations in the spider category. 
