removing libertine fonts

--- a/preamble.tex
+++ b/preamble.tex
@@ -13,8 +13,8 @@
 \usepackage[section]{placeins}
 \usepackage{leftidx}
 \usepackage{stmaryrd} % additional math symbols, e.g. \mapsfrom
-\usepackage{libertine}
-\usepackage[T1]{fontenc}
+%\usepackage{libertine}
+%\usepackage[T1]{fontenc}
 \usepackage{microtype}
 
 % ----------------------------------------------------------------
