--- a/webs.tex
+++ b/webs.tex
@@ -487,24 +487,24 @@ If we worked over $ \mathbb Z$, then these relations would not hold and we would
 \todo{Explain exactly what's happening with the square-switch relations from Scott's thesis}
 \todo{Explain why(?) the Kekule relations are consequences of these...}
 
-\subsubsection{The upwards subcategory}
-We will use $\FSp(\SL_n)^+$ and $Sp(\SL_n)^+$ to denote the full subcategories of the above where we restrict to objects which are words in $\{1^+,\ldots,(n-1)^+\}$. This means that strands at the boundary are always oriented upwards. These are tensor subcategories but not pivotal subcategories because the pairing and copairing morphisms for an object $k$ do not lie in this subcategory.
-
-\begin{lem}
-Every morphism in $\Sp(\SL_n)$ is of the form $\alpha D \beta$, where $D$ is a morphism in $\Sp(\SL_n)^+$ while $\alpha$ and $\beta$ are isomorphisms built out of tags, sending $k^-$ to $(n-k)^+$.  This decomposition is canonical up to a sign.
-\end{lem}
-\begin{proof}
-For any object $\ul{k} \in \Sp(\SL_n)$, define $\abs{\ul{k}}$ to be the object of $\Sp(\SL_n)^+$ with every $k^-$ in $\ul{k}$ replaced with $(n-k)^+$. There are isomorphisms $\ul{k} \to \abs{\ul{k}}$ given by a tensor product of identity factors and tags, canonical up to a choice of the direction of each tag, which by Equation \eqref{eq:switch} is just an overall sign ambiguity.
-
-For a morphism $C \in \Sp(\SL_n)$ between objects $\ul{k}$ and $\ul{l}$, let $\alpha$ be such an isomorphism from $\ul{k}$ to $\abs{\ul{k}}$, and $\beta$ be such an isomorphism from $\abs{\ul{l}}$ to $\ul{l}$. Define $D = \alpha^{-1} C \beta^{-1}$.
-
-\todo{sabin-- I'm a little confused by this proof. What happens if there are downward pointing strands in the middle of the web. Supposedly these are not allowed in $\Sp(\SL_n)^+$.}
-\todo{Such webs are allowed in $\Sp(\SL_n)^+$; we're just taking a full subcategory with only the positive objects. This means that it's no longer obvious what the generators of $\Sp(\SL_n)^+$. However, laddering tells us that rungs generate. We may have to do some reorganization. --Scott}
-\end{proof}
-
-\begin{cor}
-The inclusion of $\Sp(\SL_n)^+$ into $ \Sp(\SL_n) $ is an equivalence of tensor categories.
-\end{cor}
+%\subsubsection{The upwards subcategory}
+%We will use $\FSp(\SL_n)^+$ and $Sp(\SL_n)^+$ to denote the full subcategories of the above where we restrict to objects which are words in $\{1^+,\ldots,(n-1)^+\}$. This means that strands at the boundary are always oriented upwards. These are tensor subcategories but not pivotal subcategories because the pairing and copairing morphisms for an object $k$ do not lie in this subcategory.
+%
+%\begin{lem}
+%Every morphism in $\Sp(\SL_n)$ is of the form $\alpha D \beta$, where $D$ is a morphism in $\Sp(\SL_n)^+$ while $\alpha$ and $\beta$ are isomorphisms built out of tags, sending $k^-$ to $(n-k)^+$.  This decomposition is canonical up to a sign.
+%\end{lem}
+%\begin{proof}
+%For any object $\ul{k} \in \Sp(\SL_n)$, define $\abs{\ul{k}}$ to be the object of $\Sp(\SL_n)^+$ with every $k^-$ in $\ul{k}$ replaced with $(n-k)^+$. There are isomorphisms $\ul{k} \to \abs{\ul{k}}$ given by a tensor product of identity factors and tags, canonical up to a choice of the direction of each tag, which by Equation \eqref{eq:switch} is just an overall sign ambiguity.
+%
+%For a morphism $C \in \Sp(\SL_n)$ between objects $\ul{k}$ and $\ul{l}$, let $\alpha$ be such an isomorphism from $\ul{k}$ to $\abs{\ul{k}}$, and $\beta$ be such an isomorphism from $\abs{\ul{l}}$ to $\ul{l}$. Define $D = \alpha^{-1} C \beta^{-1}$.
+%
+%\todo{sabin-- I'm a little confused by this proof. What happens if there are downward pointing strands in the middle of the web. Supposedly these are not allowed in $\Sp(\SL_n)^+$.}
+%\todo{Such webs are allowed in $\Sp(\SL_n)^+$; we're just taking a full subcategory with only the positive objects. This means that it's no longer obvious what the generators of $\Sp(\SL_n)^+$. However, laddering tells us that rungs generate. We may have to do some reorganization. --Scott}
+%\end{proof}
+%
+%\begin{cor}
+%The inclusion of $\Sp(\SL_n)^+$ into $ \Sp(\SL_n) $ is an equivalence of tensor categories.
+%\end{cor}
 
 \section{Statement and proof of the main theorem}\label{sec:theorem}
 
@@ -534,7 +534,7 @@ We will study the category $\Rep(\SL_n)$ whose objects are representation of $U_
 \label{sec:generating-morphisms}
 
 Denote by $ x_1, \dots, x_n $ the usual basis of the standard $U_q(\sl_n)$-module $\bC_q^n $. We define the {\bf quantum exterior algebra}
-$$ {\textstyle \Alt^\bullet}_q(\bC_q^n) := T \bC_q^n / \langle S^2_q ( \bC_q^n) \rangle $$
+$$ {\textstyle \Alt^\bullet_q}(\bC_q^n) := T \bC_q^n / \langle S^2_q ( \bC_q^n) \rangle $$
 to be the tensor algebra (over $\bC(q) $) of $ \bC_q^n $ modulo the quantum symmetric square (see \cite{BZ}). The space $ \Alt^\bullet_q(\bC_q^n) $ is a graded $U_q(\sl_n)$-module algebra and we denote the product by $ \wedge_q $. Note that $S^2_q \bC_q^n $ is spanned by 
 $$ x_i \otimes x_j + q x_j \otimes x_i, \text{ for }  i < j , \text{ and } x_i^2, \text{ for all } i. $$ 
 Thus in $ \Alt^\bullet_q(\bC_q^n) $ we have that
@@ -556,9 +556,10 @@ where $ T $ ranges over $ k $ elements subsets of $ S $.
 
 \todo{Does $M_{a,b} $ define a coalgebra structure on $ \Alt^\bullet \bC_q^n $?  It is coassociative (the $I=H $ relation). }
 
-\subsection{Definition of the functor $\Gamma_n: \Sp(\SL_n)^+ \rightarrow \Rep(\SL_n)$} \label{sec:deffunctor}
+\subsection{Definition of the functor $\Gamma_n: \Sp(\SL_n) \rightarrow \Rep(\SL_n)$} \label{sec:deffunctor}
 
-We now define a functor $ \Gamma_n : \Sp(\SL_n)^+ \rightarrow \Rep(\SL_n) $. At the level of objects we take
+We now define a functor $ \Gamma_n : \Sp(\SL_n) \rightarrow \Rep(\SL_n) $. At the level of objects we take
+\todo{Have to say where we take negative object as well, now.}
 $$(k_1^+, \dots, k_m^+) \mapsto \Alt^{k_1}_q \bC_q^n \otimes \dots \otimes \Alt^{k_m}_q \bC_q^n .$$
 For morphisms we take
 $$ \fuse{k}{l}{k+l} \mapsto M_{k,l} \ \ \text{ and } \ \ \fork{k}{l}{k+l} \mapsto M'_{k,l}.$$
@@ -566,7 +567,7 @@ $$ \fuse{k}{l}{k+l} \mapsto M_{k,l} \ \ \text{ and } \ \ \fork{k}{l}{k+l} \mapst
 \todo{Define the map on tags.}
 
 \begin{thm}
-This defines a pivotal functor $\Gamma_n: \Sp(\SL_n)^+ \rightarrow \Rep(\SL_n)$.
+This defines a pivotal functor $\Gamma_n: \Sp(\SL_n) \rightarrow \Rep(\SL_n)$.
 \end{thm}
 \begin{proof}
 One needs to check all the relations in the spider category. 
@@ -598,11 +599,11 @@ using that $ \ell(T, S \smallsetminus T) + \ell( S \smallsetminus T, S) = |S||T|
 The functor $\Gamma_n: \Sp(\SL_n) \rightarrow \Rep(\SL_n)$ is an equivalence of pivotal categories.
 \end{thm}
 \begin{proof}
-Since $\Sp(\SL_n)^+ $ is equivalent to $ \Sp(\SL_n) $ as a tensor category, it suffices to prove that restriction of $ \Gamma_n $ to $ \Sp(\SL_n)^+ $ is an equivalence \todo{did we figure out why this suffices?}. For this we will use the following commutative diagram
+We will use the following commutative diagram
 \begin{equation}\label{diag:main}
 \xymatrix{
 \Lad_n^m \ar[r] \ar[d] & \dU^n(\gl_m) \ar[dr]^{\Phi_m^n} \ar[d]_{\Psi_m^n} & \\
-\FSp(\SL_n)^+ \ar[r] & \Sp(\SL_n)^+ \ar[r]^{\Gamma_n} & \Rep(\SL_n) \\
+\FSp(\SL_n) \ar[r] & \Sp(\SL_n) \ar[r]^{\Gamma_n} & \Rep(\SL_n) \\
 }
 \end{equation}
 where the three categories in the bottom row were defined in section \ref{sec:diagrams}, $\Phi$ and $\dU^n(\gl_m)$ are defined in section \ref{sec:phi} while $\Lad_n^m$ and $\Psi$ are defined in section \ref{sec:ladders}.
@@ -611,9 +612,9 @@ We now explain why $\Gamma_n$ is an equivalence of categories. Since it is clear
 
 Surjectivity (fullness) of $\Gamma_n$ on $\Hom$ spaces follows from the fullness of the functor $ \Phi^n_m $, which is proven in Theorem \ref{th:functorfullyfaithful}\footnote{The fullness of $\Gamma_n$ was proven in Proposition 3.5.8 of \cite{0704.1503} using Schur-Weyl duality instead of skew Howe duality, but the argument is essentially the same.}.  More precisely, given any two objects $ V, W $ in $\Rep(\SL_n) $ we can find some $m$ such that there exist $ n$-bounded weights $ \ul{k}, \ul{l} $ of $ \gl_m$ such that $\Phi^n_m(\ul{k}) = V$ and $\Phi^n_m(\ul{l}) = W $. The fullness of $ \Phi^n_m $ tells us that the map
 $$ \Phi^n_m : \one_{\ul{l}} \dU(\gl_m) \one_{\ul{k}} \rightarrow \Hom_{\SL_n}(V, W) $$
-is surjective (i.e. all the morphisms come from ladders with $m$ uprights). The commutativity of the right triangle shows us that these morphisms all come from webs in $ \Sp(\SL_n) $.
+is surjective (i.e. all the morphisms come from ladders with $m$ uprights). The commutativity of the right triangle (established in Proposition \ref{prop:commutes}) shows us that these morphisms all come from webs in $ \Sp(\SL_n) $.
 
-Next we show that $ \Gamma_n $ is injective (faithful) on $ \Hom$ spaces.  Let $w$ be a morphism in $ \Sp(\SL_n)^+ $ such that $\Gamma_n(w)=0$.  By Theorem \ref{thm:laddering} and the commutativity of the left square, we can find some $ m $ and some $\tilde{w} \in \dU^n(\gl_m) $ such that $ \Psi^n_m(\tilde{w}) = w $ by finding a ladder $ \tilde{w} $ equivalent to the web $ w $. Then by the commutativity of the right triangle, we see that $ \Phi^n_m(\tilde{w}) = 0 $.  However, by Theorem \ref{th:functorfullyfaithful}, $\Phi_m^n$ is faithful which means $\tilde{w}=0$ and hence $w=0$ as desired.
+Next we show that $ \Gamma_n $ is injective (faithful) on $ \Hom$ spaces.  \todo{Some cleanup remains here, to remove $\Sp(SL_n)^+$.} Let $w$ be a morphism in $ \Sp(\SL_n)^+ $ such that $\Gamma_n(w)=0$.  By Theorem \ref{thm:laddering} and the commutativity of the left square, we can find some $ m $ and some $\tilde{w} \in \dU^n(\gl_m) $ such that $ \Psi^n_m(\tilde{w}) = w $ by finding a ladder $ \tilde{w} $ equivalent to the web $ w $. Then by the commutativity of the right triangle, we see that $ \Phi^n_m(\tilde{w}) = 0 $.  However, by Theorem \ref{th:functorfullyfaithful}, $\Phi_m^n$ is faithful which means $\tilde{w}=0$ and hence $w=0$ as desired.
 \end{proof}
 
 \section{The functor $\Phi_m^n:\dU(\gl_m) \rightarrow \Rep(\SL_n)$}\label{sec:phi}
@@ -971,16 +972,16 @@ Equation (\ref{rel:1}) becomes (\ref{eq:commutationlad}) in diagrammatic form.  
 \end{proof}
 
 \subsection{Ladders as webs}\label{sec:psi}
-There is a functor from $ \Lad_n^m \rightarrow \FSp(SL_n)^+$  by forgetting the ladder structure of a ladder and thinking of it as a web. There is a slightly discrepancy at the level of objects: in $\Lad_n^m$ the objects $\ul{k}$ are sequences in $\{0,\ldots,n\}$, while in $\FSp(SL_n)$ the objects are sequences in $\{1^+,\ldots,(n-1)^+\}$. The functor deletes $0$s and $n$s from the sequences, and sends $k$ to $k^+$.
+There is a functor from $ \Lad_n^m \rightarrow \FSp(SL_n)$  by forgetting the ladder structure of a ladder and thinking of it as a web. There is a slightly discrepancy at the level of objects: in $\Lad_n^m$ the objects $\ul{k}$ are sequences in $\{0,\ldots,n\}$, while in $\FSp(SL_n)$ the objects are sequences in $\{1^+,\ldots,(n-1)^+\}$. The functor deletes $0$s and $n$s from the sequences, and sends $k$ to $k^+$.
 
 \begin{prop}
 \label{prop:psi}
-The functor $\Lad_n^m \to \FSp(SL_n)^+ \to \Sp(SL_n)^+$ can be factored through the functor $\Lad_n^m \to \dU^n(\gl_m)$ of the previous section, giving rise to a functor $\Psi_m^n : \dU^n(\gl_m) \to \Sp(SL_n)^+$.
+The functor $\Lad_n^m \to \FSp(SL_n) \to \Sp(SL_n)$ can be factored through the functor $\Lad_n^m \to \dU^n(\gl_m)$ of the previous section, giving rise to a functor $\Psi_m^n : \dU^n(\gl_m) \to \Sp(SL_n)$.
 \end{prop}
 \begin{proof}
-To see that $ \Psi_m^n $ exists, we must just show that the diagrammatic relations of $ \dU^n(\gl_m) $ from Proposition \ref{prop:LaddertoU} are taken to the kernel of the functor $ \FSp(\SL_n)^+ \to \Sp(\SL_n)^+ $.
+To see that $ \Psi_m^n $ exists, we must just show that the diagrammatic relations of $ \dU^n(\gl_m) $ from Proposition \ref{prop:LaddertoU} are taken to the kernel of the functor $ \FSp(\SL_n) \to \Sp(\SL_n)$.
 
-To show that (\ref{eq:IHlad}) holds in $ \Sp(\SL_n)^+ $, it suffices by pivotal composition to prove the relation
+To show that (\ref{eq:IHlad}) holds in $ \Sp(\SL_n) $, it suffices by pivotal composition to prove the relation
 \begin{equation*}
 \begin{tikzpicture}[baseline]
 \foreach \x/\y in {0/0,1/0,2/0,0/1,1/1,0/2} {
@@ -1019,7 +1020,7 @@ We have now reached the situation described in the proof of the main result.  We
 \begin{equation}\label{diag:main2}
 \xymatrix{
 \Lad_n^m \ar[r] \ar[d] & \dU^n(\gl_m) \ar[dr]^{\Phi_m^n} \ar[d]_{\Psi_m^n} & \\
-\FSp(\SL_n)^+ \ar[r] & \Sp(\SL_n)^+ \ar[r]^{\Gamma_n} & \Rep(\SL_n) \\
+\FSp(\SL_n) \ar[r] & \Sp(\SL_n) \ar[r]^{\Gamma_n} & \Rep(\SL_n) \\
 }
 \end{equation}
 
@@ -1056,14 +1057,15 @@ A similar argument holds for the $F_j $ and since these generate $\dU(\gl_m) $, 
 \end{proof}
 
 \subsection{Surjectivity}
-Finally, we show that any web can be modified, possibly using some relations, into ladder form.
+We would like to show that any web can be written, possibly using some relations, into ladder form.
+This isn't quite the case, simply because the boundary points of ladders are always oriented upwards. This is not a significant problem, because every object in $\Sp(\SL_n)$ is isomorphic, via a map made out of tags, to an upwards oriented one.
 
 \begin{thm}
 \label{thm:laddering}
-Let $ D $ be a morphism in $ \Sp(\SL_n)^+$.  Then there exists $ m $ and a morphism $ E \in \Lad_n^m $ such that $\Psi_n^m(E) = D $.
+Let $ D $ be a morphism in $ \Sp(\SL_n)$ between upwards oriented objects.  Then there exists $ m $ and a morphism $ E \in \Lad_n^m $ such that $\Psi_n^m(E) = D $.
 \end{thm}
 \begin{proof}
-Given any diagrammatic morphism $D \in \Sp(SL_n)^+$, just by a planar isotopy we can write it as
+Given any such diagrammatic morphism $D \in \Sp(SL_n)$, just by a planar isotopy we can write it as
 \begin{align*}
 \begin{tikzpicture}[baseline=12]
 \coordinate (a) at (0,0);
@@ -1338,7 +1340,7 @@ and then finally replacing each other instance where a superimposed strand cross
 to obtain $E_2$. Now one can check that $E_2$ is in fact equal to $D_2$, using only a few relations from the spider. In particular, for each of the replacements above involving a $0$ strand, when we delete the $0$ strands we see that nothing has changed. In the replacements involving an $n$ strand but no trivalent vertices, after removing the $n$-strands and replacing their endpoints with tags, we find we can cancel the tags according to Equation \eqref{eq:cancel-tags}. Finally, in the replacements involving an $n$ strand to the right of a trivalent vertex, we need to use Equation \eqref{eq:tag-migration} to move one tag past the trivalent vertex, and then Equation \eqref{eq:cancel-tags} to cancel them. \todo{Is it sufficiently confusing which replacements are being talked about here that I should number them? --Scott}
 
 In each of the local replacements used to form $E_2$ the new diagram consists of part of an upright of the ladder, along with several `half-rungs'. It is easy to see that all of these half-rungs come in matching pairs forming complete rungs, except at the left margin of $E_2$. Similarly, $E_1$ is a ladder except that it has half-rungs along its right margin. The horizontal juxtaposition $E_1 E_2$ is then a ladder.
-Since $D$ is equivalent in $\Sp(SL_n)^+$ to $E_1 E_2$, we are finished.
+Since $D$ is equivalent in $\Sp(SL_n)$ to $E_1 E_2$, we are finished.
 \end{proof}
 
 \appendix
@@ -1346,7 +1348,7 @@ Since $D$ is equivalent in $\Sp(SL_n)^+$ to $E_1 E_2$, we are finished.
 \section{The Serre relation is a pivotal consequence of the spider relations}
 \label{sec:serre}
 
-\begin{cor} The following identities hold in $\Sp(\SL_n)^+$
+\begin{cor} The following identities hold in $\Sp(\SL_n)$
 \begin{equation}\label{eq:id1}
 \tikz[baseline=40]{
 \laddercoordinates{1}{2}
