--- a/webs.tex
+++ b/webs.tex
@@ -27,7 +27,7 @@
 
 \tableofcontents
 
-\hypersetup{
+\hypersetup{ 
     colorlinks, linkcolor={dark-red},
     citecolor={dark-blue}, urlcolor={medium-blue}
 }
@@ -115,7 +115,7 @@ For $n=3$, generators for the kernel were determined by Kuperberg \cite{MR140386
 
 For $n \geq 4$, generators for the kernel have been proposed, by \cite{math.QA/0310143} (for $n=4$) and by \cite{0704.1503} (generally), but without proving that their lists of relations were complete.
 
-This paper answers the question, in particular showing that the relations of \cite{0704.1503} are complete. In fact, those relations are over complete; just the bigon collapse, $I=H$ and `square-switch' relations suffice (and in fact only one of the square-switch relations implies the others). The relevant relations are reproduced in \S\ref{sec:diagrams}.
+This paper answers the question, in particular showing that the relations of \cite{0704.1503} are complete. In fact, those relations are over complete; just the bigon collapse, $I=H$ and `square-switch' relations suffice (and in fact only one of the square-switch relations implies the others). The relevant relations appear in \S\ref{sec:diagrams}.
 The main theorem, stating the isomorphism between a combinatorially defined web category $\Sp(SL_n)$ (the $\SL_n $-spider) and the representation theory of $\SL_n$, appears in \S \ref{sec:theorem}.
 
 
