--- a/webs.tex
+++ b/webs.tex
@@ -18,8 +18,8 @@
 \address{Department of Mathematics\\ University of Toronto \\ Toronto, Canada}
 
 \author{Scott~Morrison}
-\email{scott@tqft.net}
-\address{Department of Mathematics \\ Australian National University \\ Canberra, Australia}
+\email{scott.morrison@anu.edu.au}
+\address{Mathematical Sciences Institute \\ The Australian National University \\ Canberra, Australia}
 
 \begin{document}
 
@@ -207,14 +207,12 @@ Finally, it is worth noting that the categories $\Sp(\SL_n)$ and $\dU(\gl_m)$ ca
 
 Now, the key in our current paper is the functor $\Psi_m: \dU(\gl_m) \rightarrow \Sp(\SL_n)$ obtained as a biproduct of quantum skew Howe duality. It is natural to ask if this functor lifts to a 2-functor
 $$\Psi_m: \dot{\mathbb{U}}_q(\gl_m) \rightarrow \Foam_n.$$
-In the cases $n=2,3$, such a 2-functor has recently been studied by Mackaay, Pan and Tubbenhauer \cite{1206.2118} and by Lauda and Rose \cite{LR}. 
-
-\todo{can somone put in the references, I'm not so familiar with the bib file? The second paper is by Aaron Lauda and David Rose and is in preparation}
+In the cases $n=2,3$, such a 2-functor has recently been studied by Mackaay, Pan and Tubbenhauer \cite{1206.2118} and by Lauda and Rose \cite{LRQ}. 
 
 \vspace{.5cm}
 
 \noindent {\bf Acknowledgments:}
-The authors benefited from discussions with \todo{NEED}. S.C. was supported by NSF grant DMS-1101439 and the Alfred P. Sloan foundation, \todo{NEED}. 
+The authors benefited from discussions with \todo{NEED}. S.C. was supported by NSF grant DMS-1101439 and the Alfred P. Sloan foundation, S.M. was supported by the Australian Reseach Council grant DECRA ??? and by DARPA ???. \todo{NEED}. 
 
 \section{The categories \texorpdfstring{$\FSp(\SL_n)$}{FSp(SL\_n)} and \texorpdfstring{$\Sp(\SL_n)$}{Sp(SL\_n)}}\label{sec:diagrams}
 
