including the Kekule relations

--- a/preamble.tex
+++ b/preamble.tex
@@ -98,6 +98,10 @@
 \renewcommand{\imath}{\mathfrak{i}}
 \renewcommand{\jmath}{\mathfrak{j}}
 
+\newcommand{\ssum}[1]{\Sigma#1}
+\newcommand{\sumhat}{\overline{\sum}}
+\newcommand{\sumtah}{\underline{\sum}}
+
 \newcommand{\lmod}[1]{\leftidx{_{#1}}{\operatorname{mod}}{}}
 
 \newcommand{\into}{\hookrightarrow}
