moving PDF figures into the main directory

--- a/preamble.tex
+++ b/preamble.tex
@@ -28,7 +28,7 @@
 % diagrams -------------------------------------------------------
 % figures ---------------------------------------------------------
 \newcommand{\pathtotrunk}{./}
-\newcommand{\pathtodiagrams}{\pathtotrunk diagrams/}
+\newcommand{\pathtodiagrams}{\pathtotrunk}
 
 \newcommand{\mathfig}[2]{\ensuremath{\hspace{-3pt}\begin{array}{c}%
   \raisebox{-2.5pt}{\includegraphics[width=#1\textwidth]{\pathtodiagrams #2}}%
