--- a/webs.tex
+++ b/webs.tex
@@ -73,11 +73,11 @@ This problem has been studied previously. For $n=2$, there are no trivalent vert
 
 For $n=3$, relations generating the kernel were determined by Kuperberg \cite{MR1403861}:
 \begin{align*}
-\mathfig{0.04}{webs/clockwise_circle} & = \qi{3}   &
-\mathfig{0.045}{webs/bigon} & = -\qi{2} \mathfig{0.01}{webs/strand}
+\mathfig{0.04}{clockwise_circle} & = \qi{3}   &
+\mathfig{0.045}{bigon} & = -\qi{2} \mathfig{0.01}{strand}
 \end{align*}
 \begin{align*}
-\mathfig{0.085}{webs/sl_3/oriented_square} & = \mathfig{0.085}{webs/sl_3/two_strands_horizontal} + \mathfig{0.085}{webs/sl_3/two_strands_vertical}.
+\mathfig{0.085}{oriented_square} & = \mathfig{0.085}{two_strands_horizontal} + \mathfig{0.085}{two_strands_vertical}.
 \end{align*}
 They allow one to remove circles, bigons, and squares. He introduced the term ``$\SL_3$ spider" for the resulting diagrammatic category.
 
@@ -527,7 +527,7 @@ Later, we will use Equation \eqref{eq:serre} in the proof of Proposition \ref{pr
 
 Many more local relations hold, as consequences of these. In particular \cite{0704.1503} described another classes of relations, the `Kekul\'{e}' relations:
 \begin{equation*}
- \sum_{k=-\sumhat{b}}^{-\sumtah{a} + 1} (-1)^{j+k} \qBinomial{j+k-\max{b}}{j-\ssum{b}} \qBinomial{\min{a} + n -j -k}{\ssum{a} + n -1 -j} \mathfig{0.2}{PQ/octagon_jk} = 0,
+ \sum_{k=-\sumhat{b}}^{-\sumtah{a} + 1} (-1)^{j+k} \qBinomial{j+k-\max{b}}{j-\ssum{b}} \qBinomial{\min{a} + n -j -k}{\ssum{a} + n -1 -j} \mathfig{0.2}{octagon_jk} = 0,
 \end{equation*}
 for each $\ssum{b} \leq j \leq \ssum{a}+n-1$ (each edge label is the signed sum of the blue arrows on either side, $\sumtah{a} = \sum{a} - \min{a}$, and $\sumhat{b} = \sum{b}-\min{b}$).
 We do not know a diagrammatic argument deriving the Kekul\'{e} relations from the relations presented here; nevertheless, such a derivation must exist, by our main theorem.
